@startuml


skinparam titleBorderRoundCorner 15
skinparam titleBorderThickness 2
skinparam titleBorderColor blue


header
<font color=red>Warning:</font>
Educational Purposes
endheader

center footer Carlos Caballero ([[https://www.carloscaballero.io https://www.carloscaballero.io]])


title Proxy Pattern

interface Subject {
    +operation(): void
}

class RealSubject  {
    +operation(): void
}

class Proxy {
    -realSubject: RealSubject
    +Proxy(realSubject: RealSubject)
    +operation(): void
}

Subject <|.. RealSubject
Subject <|.. Proxy
Proxy o- RealSubject

Client ..> Proxy : "<<use>>"



@enduml
